安卓自定义View进阶-Path之贝塞尔曲线

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">CustomView</string>
+    <string name="app_name">View旅途</string>
+    <string name="control1">控制点1</string>
+    <string name="control2">控制点2</string>
 </resources>
